# meduzzen_backend

./: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  script.sh
.github/workflows/: deploy-action.yml  django-test.yml  django_testing.yml  django_workflow.yml  github-actions-demo.yml
core/: manage.py
core/company/: admin.py  invitation.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
core/company/migrations/: 0001_initial.py  0002_alter_company_image_path_alter_company_name.py  0002_initial.py
core/company/views/: invitation.py  views.py
core/invitation/: apps.py  base.py  models.py  serializers.py  tests.py  urls.py  views.py
core/invitation/migrations/: 0001_initial.py  0002_initial.py  0003_alter_invitationmodel_company.py
core/meduzzen_backend/: asgi.py  celery.py  settings.py  urls.py  views.py  wsgi.py
core/notification/: apps.py  models.py  serializers.py  signals.py  urls.py  views.py
core/notification/migrations/: 0001_initial.py
core/notification/websockets/: consumer.py  middleware.py  routing.py
core/quiz/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
core/quiz/migrations/: 0001_initial.py  0002_rename_answer_answermodel_text_and_more.py  0003_resultsmodel.py  0004_alter_quizmodel_company.py  0005_resultsmodel_score_and_more.py
core/request/: apps.py  models.py  serializers.py  tests.py
core/request/migrations/: 0001_initial.py  (+1 more)
core/role/: apps.py  models.py  permissions.py  tests.py
core/user/: models.py  permissions.py  request.py  serializers.py  tests.py  urls.py  views.py
core/utils/: csv_writer.py  models.py  tasks.py
ruff/: .pre-commit-config.yaml  ruff.toml
(+10 files in other folders)
